2024 version Java 21 Kotlin 2.0.20 Gradle 8.10.1